# robo-game-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ClassicalTeam.h  Collision.h  GameSim.h  SimState.h  utils.h
matlab/: interpret_mc_results.m  visualize_dmpc_test.m  visualize_game.m  visualize_jointplanning.m  visualize_mc_game.m
param/: ss_game_to_3.yaml
py/: MonteCarlo.py  mc_example_1.py  mc_example_2.py  run_centralized_sim.py  run_sim.py  test_collisions.py  test_dmpc.py  test_jointpuckplayer.py
py/src/: CBF.py  CentralizedMPC.py  CentralizedPlayers.py  CentralizedPuckPlayerMPC.py  CentralizedTeam.py  ClassicalPlayer.py  ClassicalTeam.py  ContactOptimizer.py  DMPC.py  DMPCPlayer.py  DMPCTeam.py  JointCentralizedTeam.py  JointPuckPlayerMPC.py  LinearOptimizer.py  MiqpOptimizer.py  NonLinearOptimizer.py  SimState.py
src/: ClassicalTeam.cpp  GameSim.cpp  InternalGame.cpp  RoboGamePy.cpp
